2001-09-04  Jody Goldberg <jgoldberg@home.com>

	* ms-chart.c (ms_excel_chart) : don't import the spec if we did not
	  create the graph.

2001-09-03  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c (ms_excel_read_cf) : Do some guessing about how they
	  store the format information.
	(ms_excel_read_sheet) : merge in ms_excel_read_cell, and reorder the
	  records to match their biff order.  call ms_excel_read_cf.

2001-09-02  Jody Goldberg <jgoldberg@home.com>

	* biff-types.h : Add CONDFMT

2001-08-29  Jody Goldberg <jgoldberg@home.com>

	* ms-chart.c (excel_chart_series_new) : init the xml node.
	(excel_chart_series_write_xml) : new.
	(BC_R(store_chartgroup_type)) : new utility.
	(BC_R(bar)) : convert to xml.
	(BC_R(line)): convert to xml.
	(BC_R(pie)) : convert to xml.
	(BC_R(scatter)) : convert to xml.
	(BC_R(chartformat)) : store the general chart group details.
	(BC_R(end)) : store the series specs associated with this chartgroup.
	(ms_excel_chart) : tweaks for xml.

2001-08-28  Jody Goldberg <jgoldberg@home.com>

	* ms-obj.c (ms_read_OBJ) : pass graphs into their parser.

	* ms-excel-read.c (ms_sheet_realize_obj) : renamed from
	  ms_sheet_obj_realize.
	(ms_sheet_create_obj) : renamed from ms_sheet_obj_create.
	  Improve the warnings for unhandled objects.
	  Pass graphs into the parser.

	* ms-container.c (ms_container_workbook) : delete.

	* ms-chart.c (ms_excel_chart) : enable some of the xml spec generation.
	  and take the GnmGraph as an argument.
	(ms_excel_read_chart) : take the graph as an argument.

2001-08-27  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c (ms_sheet_parse_expr_internal) : disable some of the
	  debugging spew.

2001-08-26  Zbigniew Chyla  <cyba@gnome.pl>

	* boot.c (excel_save):
	Remove GNUMERIC_ENABLE_XL_OVERWRITE hack. This is now supported via
	flag in plugin.xml file.

	* plugin.xml.in: s/file_overwrite/overwrite_files/

2001-08-24  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c : fix and prune includes.